# tg_bot_api_drf

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
RoaderBot-api/: README.md
RoaderBot-api/api/: pyproject.toml
RoaderBot-api/api/app/app/: settings.py  urls.py
RoaderBot-api/api/app/bot_api/: admin.py  serializers.py
RoaderBot-api/api/app/bot_api/api/v1/: urls.py  views.py
RoaderBot-api/api/app/bot_api/migrations/: 0001_initial.py  0002_city_alter_road_status_road_city.py  0004_alter_road_city.py
api/: Dockerfile  pyproject.toml
api/app/: data.xlsx
api/app/app/: settings.py  urls.py
api/app/bot_api/: admin.py  models.py  serializers.py  views.py
api/app/bot_api/api/v1/: urls.py  views.py
api/app/bot_api/migrations/: 0003_alter_road_city.py  0004_alter_road_city.py  0005_alter_road_repair_date_alter_road_warranty.py  0006_rating_phone_report_phone_suggestion_phone.py
api/app/scripts/: migrate_data_frov_xlsx.py
bot/: Dockerfile  bot.py  pyproject.toml
bot/api/: get_location.py  interface.py
bot/config_data/: loader_bot.py
bot/handlers/: assess_quality_repair.py  complain_handlers.py  suggest_idea.py  user_handlers.py
bot/keyboards/: callbackdata.py  keyboards.py  stngs_kbd.py
bot/lexicon/: lexicon_ru.py
bot/states/: tgbot_states.py
