[tool.poetry]
name = "roaderbot"
version = "0.1.0"
description = ""
authors = ["user <bav-574@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "2.25.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
geopandas = "^0.12.2"
geopy = "^2.3.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
