[tool.poetry]
name = "bot"
version = "0.1.0"
description = "RoaderBot"
authors = ["komediantto <komediantto@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
loguru = "^0.7.0"
requests = "^2.28.2"
python-telegram-bot-pagination = "^0.0.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
